# libsdl

./: .gitignore  CMakeLists.txt  Draw.cpp  Draw.hpp  Events.cpp  Events.hpp  Exception.cpp  Exception.hpp  Font.cpp  Font.hpp  Makefile  Point.hpp  README.md  Rect.cpp  Rect.hpp  Renderer.cpp  Renderer.hpp  Surface.cpp  Surface.hpp  Texture.cpp  Texture.hpp  Vectors.hpp  Window.cpp  Window.hpp  a.out  libsdl.hpp  main.cpp  mysdl.hpp  sdl  temp.hpp  test
.github/workflows/: Linux.yml  c-cpp.yml  macos.yml
includes/: Color.hpp  EventHandler.hpp  Font.hpp  Point.hpp  Text.hpp  Vector.hpp  Window.hpp  libsdl.hpp
src/: Color.cpp  EventHandler.cpp  Font.cpp  Text.cpp  Window.cpp  main.cpp
tests/: main.cpp
